--- a/py_src/normalmapscanner.kv
+++ b/py_src/normalmapscanner.kv
@@ -1,22 +1,36 @@
 <MenuScreen>:
     GridLayout:
-        cols: 1
+        rows: 2
+        padding: 20
+        spacing: 50
         Image:
             source: 'logo.png'
-        Button:
-            text: 'Full normal map generation process'
-            on_press: root.manager.current = 'full_process_part_1_screen'
-        Button:
-            text: 'Gather input images'
-            on_press: root.manager.current = 'gather_screen'
-        Button:
-            text: 'Calculate normal map'
-            on_press: root.manager.current = 'calculate_screen'
-        Button:
-            text: 'Calibrate camera'
-            on_press: root.manager.current = 'calibrate_screen'
-        Button:
-            text: 'Quit'
+        GridLayout:
+            rows: 2
+            padding: (50, 0)
+            spacing: 10
+            GridLayout:
+                cols: 3
+                spacing: 20
+                Button:
+                    text: 'Full normal map\ngeneration process'
+                    halign: 'center'
+                    on_press: root.manager.current = 'full_process_part_1_screen'      
+                GridLayout:
+                    rows:2
+                    spacing: 10
+                    Button:
+                        text: 'Gather input images'
+                        on_press: root.manager.current = 'gather_screen'
+                    Button:
+                        text: 'Calculate normal map'
+                        on_press: root.manager.current = 'calculate_screen'
+                Button:
+                    text: 'Calibrate camera'
+                    on_press: root.manager.current = 'calibrate_screen'
+            Button:
+                text: 'Quit'
+                size_hint_y: 0.2
 
 <FullProcessPart1Screen>:
     GridLayout:
