--- a/py_src/normalmapscanner.kv
+++ b/py_src/normalmapscanner.kv
@@ -74,6 +74,14 @@
         GridLayout:
             padding: 20
             spacing: 50
+            Texture:
+                size_hint: 0.5, 0.5
+                pos_hint: {'center_x': 0.0, 'center_y': 0.0}
+            Camera:
+                size_hint: 0.5, 0.5
+                resolution: (640, 480)
+                pos_hint: {'center_x': 0.0, 'center_y': 0.0}
+                play: True
 
 <CalculateScreen>:
     BoxLayout:
