App - fixed problem with image reloading

--- a/py_src/normalmapscanner.kv
+++ b/py_src/normalmapscanner.kv
@@ -71,7 +71,7 @@
             pos_hint: {'center_x': 0.5, 'center_y': 0.05}
             text: 'Check camera'
             font_size: self.height * font_size_height_factor
-            on_release: root.check_camera
+            on_release: root.check_camera()
         Button:
             size_hint: (0.2, 0.05)
             pos_hint: {'center_x': 0.89, 'center_y': 0.05}
