--- a/py_src/normalmapscanner.kv
+++ b/py_src/normalmapscanner.kv
@@ -111,8 +111,8 @@
         GridLayout:
             cols: 2
             rows: 1
-            size_hint: (0.38, None)
-            pos_hint: {'center_x': 0.3, 'center_y': 0.5}
+            size_hint: (0.38, 0.05)
+            pos_hint: {'center_x': 0.5, 'center_y': 0.05}
             Label:
                 size_hint: (0.15, 0.05)
                 pos_hint: {'left': 0.1, 'bottom': 0}
@@ -122,8 +122,9 @@
                 valign: 'middle'
             Spinner:
                 id: spinner_id
-                font_size: self.width * 0.05
+                size_hint: (0.85, 0.05)
                 pos_hint: {'right': 1, 'bottom': 0}
+                font_size: self.width * 0.05
                 text: "Click to choose assets path"
                 on_text: root.spinner_clicked(spinner_id.text)
         Button:
