--- a/py_src/normalmapscanner.kv
+++ b/py_src/normalmapscanner.kv
@@ -3,43 +3,95 @@
 #:set tmp_dir './tmp/'
 
 <MenuScreen>:
-    GridLayout:
-        rows: 2
-        padding: 20
-        spacing: 50
-        Image:
-            source: 'assets/logo.png'
+    FloatLayout:
         GridLayout:
+            size_hint: (1, 0.95)
+            pos_hint: {'left': 0, 'top': 1}
             rows: 2
-            padding: (50, 0)
-            spacing: 30
+            padding: (20, 20, 20, 10)
+            spacing: 50
+            Image:
+                source: 'assets/logo.png'
             GridLayout:
-                cols: 3
+                rows: 2
+                padding: (50, 0)
                 spacing: 30
-                Button:
-                    text: 'Full normal map\ngeneration process'
-                    font_size: self.width * font_size_width_factor
-                    halign: 'center'
-                    on_press: root.manager.current = 'full_process_part_1_screen'      
                 GridLayout:
-                    rows:2
+                    cols: 3
                     spacing: 30
                     Button:
-                        text: 'Gather input images'
+                        text: 'Full normal map\ngeneration process'
                         font_size: self.width * font_size_width_factor
-                        on_press: root.manager.current = 'gather_screen'
-                    Button:
-                        text: 'Calculate normal map'
-                        font_size: self.width * font_size_width_factor
-                        on_press: root.manager.current = 'calculate_screen'
+                        halign: 'center'
+                        on_press: root.manager.current = 'full_process_part_1_screen'
+                    GridLayout:
+                        rows:2
+                        spacing: 30
+                        Button:
+                            text: 'Gather input images'
+                            font_size: self.width * font_size_width_factor
+                            on_press: root.manager.current = 'gather_screen'
+                        Button:
+                            text: 'Calculate normal map'
+                            font_size: self.width * font_size_width_factor
+                            on_press: root.manager.current = 'calculate_screen'
+                    GridLayout:
+                        rows:2
+                        spacing: 30
+                        Button:
+                            text: 'Calibrate camera'
+                            font_size: self.width * font_size_width_factor
+                            on_press: root.manager.current = 'calibrate_screen'
+                        Button:
+                            text: 'Change workspace'
+                            font_size: self.width * font_size_width_factor
+                            on_press: root.show_change_workspace_menu()
                 Button:
-                    text: 'Calibrate camera'
-                    font_size: self.width * font_size_width_factor
-                    on_press: root.manager.current = 'calibrate_screen'
+                    text: 'Quit'
+                    font_size: self.height * font_size_height_factor
+                    size_hint_y: 0.2
+        WorkspaceWidget:
+            id: workspace_id
+            size_hint: (1, 0.05)
+            pos_hint: {'left': 0.0, 'bottom': 0.0}
+
+<WorkspaceWidget>:
+    FloatLayout:
+        id: workspace_layout
+        canvas:
+            Color:
+                rgba: 0.2, 0.2, 0.2, 1
+            Rectangle:
+                pos: self.pos
+                size: self.size
+        Label:
+            id: workspace_path_label
+            size_hint: (1, 1)
+            pos_hint: {'left': 0.3, 'bottom': 0.2}
+            font_size: self.height * font_size_height_factor
+            text_size: self.size
+            text: "Workspace path: " + root.workspace_path_property
+            halign: 'left'
+            valign: 'middle'
+
+<ChooseWorkspaceDialog>:
+    BoxLayout:
+        size: root.size
+        pos: root.pos
+        orientation: "vertical"
+        FileChooserListView:
+            id: filechooser
+
+        BoxLayout:
+            size_hint_y: None
+            height: 30
             Button:
-                text: 'Quit'
-                font_size: self.height * font_size_height_factor
-                size_hint_y: 0.2
+                text: "Cancel"
+                on_release: root.cancel()
+
+            Button:
+                text: "Change"
+                on_release: root.change_workspace(filechooser.path)
 
 <FullProcessPart1Screen>:
     GridLayout:
@@ -53,86 +105,101 @@
 
 <GatherScreen>:
     FloatLayout:
-        Label:
-            text: 'Gather all input images'
-            size_hint: 0.5, 0.11
-            font_size: self.height
-            halign: 'center'
-            valign: 'middle'
-            pos_hint: {'center_x': 0.5, 'center_y': 0.9}
-        Button:
-            size_hint: (0.3, 0.05)
-            pos_hint: {'center_x': 0.15, 'center_y': 0.05}
-            text: 'Back to menu'
-            font_size: self.height * font_size_height_factor
-            on_press: root.manager.current = 'menu_screen'
-        Button:
-            size_hint: (0.3, 0.05)
-            pos_hint: {'center_x': 0.5, 'center_y': 0.05}
-            text: 'Check camera'
-            font_size: self.height * font_size_height_factor
-            on_release: root.check_camera()
-        Button:
-            size_hint: (0.3, 0.05)
-            pos_hint: {'center_x': 0.85, 'center_y': 0.05}
-            text: 'Capture all images'
-            font_size: self.height * font_size_height_factor
-            on_press: root.capture_all_assets()
-        Image:
-            id: check_image
-            size_hint_y: 0.7
-            allow_stretch: True
-            keep_ratio: True
-            pos_hint: {'center_x': 0.5, 'center_y': 0.45}
-            source: tmp_dir + 'tmp.png'
+        FloatLayout:
+            size_hint: (1, 0.95)
+            pos_hint: {'left': 0, 'top': 1}
+            Label:
+                text: 'Gather all input images'
+                size_hint: 0.5, 0.11
+                font_size: self.height
+                halign: 'center'
+                valign: 'middle'
+                pos_hint: {'center_x': 0.5, 'center_y': 0.9}
+            Button:
+                size_hint: (0.3, 0.05)
+                pos_hint: {'center_x': 0.15, 'center_y': 0.05}
+                text: 'Back to menu'
+                font_size: self.height * font_size_height_factor
+                on_press: root.manager.current = 'menu_screen'
+            Button:
+                size_hint: (0.3, 0.05)
+                pos_hint: {'center_x': 0.5, 'center_y': 0.05}
+                text: 'Check camera'
+                font_size: self.height * font_size_height_factor
+                on_release: root.check_camera()
+            Button:
+                size_hint: (0.3, 0.05)
+                pos_hint: {'center_x': 0.85, 'center_y': 0.05}
+                text: 'Capture all images'
+                font_size: self.height * font_size_height_factor
+                on_press: root.capture_all_assets()
+            Image:
+                id: check_image
+                size_hint_y: 0.7
+                allow_stretch: True
+                keep_ratio: True
+                pos_hint: {'center_x': 0.5, 'center_y': 0.45}
+                source: tmp_dir + 'tmp.png'
+        WorkspaceWidget:
+            id: workspace_id
+            size_hint: (1, 0.05)
+            pos_hint: {'left': 0.0, 'bottom': 0.0}
 
 <CalculateScreen>:
+    on_pre_enter: root.reload_current_assets_path()
     FloatLayout:
-        Label:
-            text: 'Calculate normal map'
-            size_hint: 0.5, 0.11
-            font_size: self.height
-            halign: 'center'
-            valign: 'middle'
-            pos_hint: {'center_x': 0.5, 'center_y': 0.9}
-        Image:
-            id: normal_map_image
-            size_hint_y: 0.7
-            allow_stretch: True
-            keep_ratio: True
-            pos_hint: {'center_x': 0.5, 'center_y': 0.45}
-            source: tmp_dir + 'normalmap.bmp'
-        Button:
-            size_hint: (0.3, 0.05)
-            pos_hint: {'center_x': 0.85, 'center_y': 0.05}
-            text: 'Calculate normal map'
-            font_size: self.height * font_size_height_factor
-            on_press: root.calculate_normal_map()
-        GridLayout:
-            cols: 2
-            rows: 1
-            size_hint: (0.38, 0.05)
-            pos_hint: {'center_x': 0.5, 'center_y': 0.05}
+        FloatLayout:
+            size_hint: (1, 0.95)
+            pos_hint: {'left': 0, 'top': 1}
             Label:
-                size_hint: (0.15, 0.05)
-                pos_hint: {'left': 0.1, 'bottom': 0}
-                text: 'Assets path: '
-                font_size: self.width * 0.15
-                halign: 'left'
+                text: 'Calculate normal map'
+                size_hint: 0.5, 0.11
+                font_size: self.height
+                halign: 'center'
                 valign: 'middle'
-            Spinner:
-                id: spinner_id
-                size_hint: (0.85, 0.05)
-                pos_hint: {'right': 1, 'bottom': 0}
-                font_size: self.width * 0.05
-                text: "Click to choose assets path"
-                on_text: root.spinner_clicked(spinner_id.text)
-        Button:
-            size_hint: (0.3, 0.05)
-            pos_hint: {'center_x': 0.15, 'center_y': 0.05}
-            text: 'Back to menu'
-            font_size: self.height * font_size_height_factor
-            on_press: root.manager.current = 'menu_screen'
+                pos_hint: {'center_x': 0.5, 'center_y': 0.9}
+            Image:
+                id: normal_map_image
+                size_hint_y: 0.7
+                allow_stretch: True
+                keep_ratio: True
+                pos_hint: {'center_x': 0.5, 'center_y': 0.45}
+                source: tmp_dir + 'normalmap.bmp'
+            Button:
+                size_hint: (0.3, 0.05)
+                pos_hint: {'center_x': 0.85, 'center_y': 0.05}
+                text: 'Calculate normal map'
+                font_size: self.height * font_size_height_factor
+                on_press: root.calculate_normal_map()
+            GridLayout:
+                cols: 2
+                rows: 1
+                size_hint: (0.38, 0.05)
+                pos_hint: {'center_x': 0.5, 'center_y': 0.05}
+                Label:
+                    size_hint: (0.3, 0.05)
+                    pos_hint: {'left': 0.1, 'bottom': 0}
+                    text: 'Assets path: '
+                    font_size: self.width * 0.15
+                    halign: 'left'
+                    valign: 'middle'
+                Spinner:
+                    id: spinner_id
+                    size_hint: (0.7, 0.05)
+                    pos_hint: {'right': 1, 'bottom': 0}
+                    font_size: self.width * 0.05
+                    text: "Click to choose assets path"
+                    on_text: root.spinner_clicked(spinner_id.text)
+            Button:
+                size_hint: (0.3, 0.05)
+                pos_hint: {'center_x': 0.15, 'center_y': 0.05}
+                text: 'Back to menu'
+                font_size: self.height * font_size_height_factor
+                on_press: root.manager.current = 'menu_screen'
+        WorkspaceWidget:
+            id: workspace_id
+            size_hint: (1, 0.05)
+            pos_hint: {'left': 0.0, 'bottom': 0.0}
 
 <CalibrateScreen>:
     BoxLayout:
