App - normal map preview

--- a/py_src/normalmapscanner.kv
+++ b/py_src/normalmapscanner.kv
@@ -165,7 +165,7 @@
                 pos_hint: {'center_x': 0.5, 'center_y': 0.47}
                 allow_stretch: True
                 keep_ratio: True
-                source: tmp_dir + 'normalmap.bmp'
+                source: 'assets/preview.jpg'
             Label:
                 id: progress_label
                 text: '0%'
